Address code review feedback
1. ChunkloaderHistory#tail now uses a streaming Deque ring buffer
   (O(limit) memory, O(file size) single-pass IO) instead of
   Files.readAllLines. Scales to long-running servers with many
   thousands of events.

2. Drop logRestore entirely. Restart events were dominating /crfp
   history output without adding diagnostic value that server logs
   don't already cover.

3. Line terminator switched from System.lineSeparator() to a literal
   "\n" so files stay parseable when a world folder moves between
   Windows and Linux.

4. Gson imports at the top of CRFPCommands instead of inline fully-
   qualified references.

5. ChunkloaderRegistry#remove no longer double-lookups the map.
   Folded doRemove into a cleanupRemoved helper that takes the
   already-resolved Chunkloader.

6. Dropped the non-existent broadcastSystemMessage(Component, UUID)
   mixin and removed require=0 from every surviving injection so the
   defaultRequire=1 from mixins.json now applies — broken targets
   after a MC/NeoForge update will fail loudly instead of silently
   becoming no-ops.

7. playerGameType/previousPlayerGameType now written as int via
   GameType.getId(). Vanilla's readPlayerMode uses tag.getInt +
   GameType.byId, so the string form was silently failing the
   numeric-type check and the fake fell back to the server's default
   gamemode — usually SURVIVAL, which masked the bug. Reviewer was
   correct, I was wrong.